Fix bug adaro agro logo

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -30,7 +30,7 @@
                 <div class="relative z-50 w-full flex items-center justify-between lg:w-auto">
                     <!-- logo Adaro Agro-->
                     <a href="./index.html">
-                        <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="lg:w-9 w-8 lg:ml-4 ml-6 lg:pl-0 ">
+                        <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="lg:w-9 w-8 ml-6 lg:pl-0 md:ml-28">
                     </a>
                     <!-- btn menu -->
                     <button id="hamburger" class="relative w-10 h-10 lg:hidden">
@@ -193,7 +193,7 @@
                 <div class="w-full h-full lg:mt-36 mt-10 mb-10 text-center text-greenAgro font-montserrat font-extrabold lg:text-5xl text-3xl">Our Team</div>
                 <div class="grid lg:grid-cols-2 md:grid-cols-2 grid-cols-1 grid-flow-row lg:grid-flow-row md:grid-flow-row gap-y-10 lg:mt-20 lg:px-72">
                     <!-- Wahampi -->
-                    <div class="hover:scale-110 duration-300">
+                    <div class="hover:scale-110 duration-300 col-span-2 m-5">
                         <img src="https://media.discordapp.net/attachments/938716010863808512/938716098029813779/Profile_Wafi-min.png?width=384&height=682" alt="Muhammad Hibatul Wafi" class="m-auto rounded-3xl w-72 duration-300">
                         <h1 class="text-blackSeeDetails font-poppins font-semibold lg:text-2xl text-xl py-2">Muhammad Hibatul Wafi Bin Rahmat</h1>
                         <div class="m-auto text-black font-poppins font-normal text-center lg:text-lg md:text-lg text-sm leading-8">
@@ -210,7 +210,7 @@
                     </div>
                     
                     <!-- Dapot -->
-                    <div class="hover:scale-110 duration-300">
+                    <div class="hover:scale-110 duration-300 mx-5">
                         <img src="https://media.discordapp.net/attachments/938716010863808512/938716117927591997/Profil_Daffa.png?width=384&height=682" alt="Ahmad Daffa Muttaqin" class="m-auto rounded-3xl w-72 duration-300">
                         <h1 class="text-blackSeeDetails font-poppins font-semibold lg:text-2xl text-xl py-2">Ahmad Daffa Muttaqin</h1>
                         <div class="m-auto text-black font-poppins font-normal text-center lg:text-lg md:text-lg text-sm leading-8">
@@ -221,6 +221,23 @@
                                 <img src="https://media.discordapp.net/attachments/938376555254652948/938376588322558022/Instagram2.png" alt="Instagram" class="w-9 mx-5 hover:scale-110 duration-200 m-auto">
                             </a>
                             <a href="https://www.linkedin.com/in/ahmad-daffa-muttaqin-63a7b8228/">
+                                <img src="https://media.discordapp.net/attachments/938376555254652948/938376588725219338/linkedin2.png" alt="Linkedin" class="w-9 mx-5 hover:scale-110 duration-200 m-auto">
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Amar -->
+                    <div class="hover:scale-110 duration-300 mx-5">
+                        <img src="https://media.discordapp.net/attachments/938716010863808512/942669980191821844/IMG_1082222.jpg?width=384&height=682" alt="Muamar Hafizh" class="m-auto rounded-3xl w-72 duration-300">
+                        <h1 class="text-blackSeeDetails font-poppins font-semibold lg:text-2xl text-xl py-2">Muamar Hafizh</h1>
+                        <div class="m-auto text-black font-poppins font-normal text-center lg:text-lg md:text-lg text-sm leading-8">
+                            Financial Director
+                        </div>
+                        <div class="flex sticky m-auto justify-center lg:mt-5 mt-3">
+                            <a href="https://www.instagram.com/muamarhafizh_/">
+                                <img src="https://media.discordapp.net/attachments/938376555254652948/938376588322558022/Instagram2.png" alt="Instagram" class="w-9 mx-5 hover:scale-110 duration-200 m-auto">
+                            </a>
+                            <a href="https://www.linkedin.com/in/muamar-hafizh-771316171/">
                                 <img src="https://media.discordapp.net/attachments/938376555254652948/938376588725219338/linkedin2.png" alt="Linkedin" class="w-9 mx-5 hover:scale-110 duration-200 m-auto">
                             </a>
                         </div>
