--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./tailwind/output.css">
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="stylesheet" href="/assets/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
     
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -32,7 +31,7 @@
                 <div class="relative z-50 w-full flex items-center justify-between lg:w-auto">
                     <!-- logo Adaro Agro-->
                     <a href="./index.html">
-                        <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="lg:w-9 w-8 lg:ml-4 ml-6 lg:pl-0 ">
+                        <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="lg:w-9 w-8 ml-6 lg:pl-0 md:ml-28">
                     </a>
                     <!-- btn menu -->
                     <button id="hamburger" class="relative w-10 h-10 lg:hidden">
@@ -80,76 +79,76 @@
         </div>
     </header>
 
-    <div class="h-full w-full">  
+    <div class="">  
         <!-- Image Slider with swiper js -->
         <div class="swiper mySwiper1 py-14">
             <!-- Judul Gallery -->
             <div class="w-full h-full lg:mt-36 mt-24 text-center text-greenAgro font-montserrat font-extrabold lg:text-6xl text-4xl">Gallery</div>
             <!-- Mulai masuk bagian image slider -->
-            <div class="swiper-wrapper w-fit lg:mt-16 mt-10">
-              <div class="swiper-slide">
+            <div class="swiper-wrapper lg:mt-16 mt-10 items-center">
+              <div class="swiper-slide hover:scale-110 duration-300">
                   <!-- Betel Nut -->
                 <img src="https://media.discordapp.net/attachments/937942372497649664/937942925386600508/7.png?width=1027&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide hover:scale-110 duration-300">
                 <img src="https://media.discordapp.net/attachments/937942372497649664/937942951605202974/8.png?width=1023&height=682" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide hover:scale-110 duration-300">
                 <img src="https://media.discordapp.net/attachments/937942372497649664/937942977169461268/9.png?width=1026&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
               <!-- Black Pepper -->
-              <div class="swiper-slide">
+              <div class="swiper-slide hover:scale-110 duration-300">
                 <img src="https://media.discordapp.net/attachments/937944002559373312/937944295753797632/25.png?width=1021&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide hover:scale-110 duration-300">
                 <img src="https://media.discordapp.net/attachments/937944002559373312/937944296307453992/26.png?width=1007&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide hover:scale-110 duration-300">
                 <img src="https://cdn.discordapp.com/attachments/937944002559373312/937944296840101928/27.png" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
               <!-- Cassia -->
-              <div class="swiper-slide">
+              <div class="swiper-slide hover:scale-110 duration-300">
                 <img src="https://media.discordapp.net/attachments/937944099670065212/937944406168850432/2.png?width=1028&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide hover:scale-110 duration-300">
                 <img src="https://media.discordapp.net/attachments/937944099670065212/937944406726684692/3.png?width=1022&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide hover:scale-110 duration-300">
                 <img src="https://media.discordapp.net/attachments/937944099670065212/937944407192244264/4.png?width=1025&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
               <!-- Cloves -->
-              <div class="swiper-slide">
+              <div class="swiper-slide hover:scale-110 duration-300">
                 <img src="https://media.discordapp.net/attachments/937944126480076841/937944509738786876/unknown.png?width=1032&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide">
-                <img src="https://media.discordapp.net/attachments/937944126480076841/937944510397308978/unknown.png?width=1009&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
+              <div class="swiper-slide hover:scale-110 duration-300">
+                <img src="https://media.discordapp.net/attachments/937944126480076841/937944512876142663/unknown.png?width=1028&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide hover:scale-110 duration-300">
                 <img src="https://media.discordapp.net/attachments/937944126480076841/937944511244566599/unknown.png?width=945&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
               <!-- Nutmeg -->
-              <div class="swiper-slide">
+              <div class="swiper-slide hover:scale-110 duration-300">
                 <img src="https://media.discordapp.net/attachments/937944161808711740/937944583965409320/unknown.png?width=1028&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide hover:scale-110 duration-300">
                 <img src="https://media.discordapp.net/attachments/937944161808711740/937944584640663592/unknown.png?width=1027&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide hover:scale-110 duration-300">
                 <img src="https://cdn.discordapp.com/attachments/937944161808711740/937944586561654804/unknown.png" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
               <!-- White Cardamom -->
-              <div class="swiper-slide">
+              <div class="swiper-slide hover:scale-110 duration-300">
                 <img src="https://media.discordapp.net/attachments/937944195673514024/937944618098634752/unknown.png?width=910&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide hover:scale-110 duration-300">
                 <img src="https://media.discordapp.net/attachments/937944195673514024/937944618379661362/unknown.png?width=863&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide hover:scale-110 duration-300">
                 <img src="https://media.discordapp.net/attachments/937944195673514024/937944618715217981/unknown.png?width=943&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
               <!-- End Insert Image -->
             </div>
-            <div class="swiper-pagination"></div>
+            <div class="swiper-pagination mt-2"></div>
           </div>
         <!-- End Image Slider -->
     
