--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="relative w-full flex items-center justify-between lg:w-auto">
                     <!-- logo Adaro Agro-->
                     <a href="./index.html">
-                        <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="lg:w-9 w-8 md:ml-28">
+                        <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="lg:w-9 w-8 ml-6 lg:pl-0 md:ml-28">
                     </a>
                     <!-- btn menu -->
                     <button id="hamburger" class="relative w-10 h-10 lg:hidden">
