--- a/whiteCardamom.html
+++ b/whiteCardamom.html
@@ -31,7 +31,7 @@
                 <div class="relative z-50 w-full flex items-center justify-between lg:w-auto">
                     <!-- logo Adaro Agro-->
                     <a href="./index.html">
-                        <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="lg:w-9 w-8 lg:ml-4 ml-6 lg:pl-0 ">
+                        <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="lg:w-9 w-8 ml-6 lg:pl-0 md:ml-28">
                     </a>
                     <!-- btn menu -->
                     <button id="hamburger" class="relative w-10 h-10 lg:hidden">
