--- a/aboutUs.html
+++ b/aboutUs.html
@@ -190,10 +190,11 @@
                     </div>
                 </div>
 
+                <!-- Foto Team -->
                 <div class="w-full h-full lg:mt-36 mt-10 mb-10 text-center text-greenAgro font-montserrat font-extrabold lg:text-5xl text-3xl">Our Team</div>
                 <div class="grid lg:grid-cols-2 md:grid-cols-2 grid-cols-1 grid-flow-row lg:grid-flow-row md:grid-flow-row gap-y-10 lg:mt-20 lg:px-72">
                     <!-- Wahampi -->
-                    <div class="hover:scale-110 duration-300 col-span-2 m-5">
+                    <div class="hover:scale-110 duration-300 lg:col-span-2 col-span-1 m-5">
                         <img src="https://media.discordapp.net/attachments/938716010863808512/938716098029813779/Profile_Wafi-min.png?width=384&height=682" alt="Muhammad Hibatul Wafi" class="m-auto rounded-3xl w-72 duration-300">
                         <h1 class="text-blackSeeDetails font-poppins font-semibold lg:text-2xl text-xl py-2">Muhammad Hibatul Wafi Bin Rahmat</h1>
                         <div class="m-auto text-black font-poppins font-normal text-center lg:text-lg md:text-lg text-sm leading-8">
