Fix text in page betelnut and change product photo in landing page

--- a/index.html
+++ b/index.html
@@ -152,25 +152,25 @@
 
             <!--                                                        Our Products                                                        -->
 
-            <div style="background-image: url('./assets/img/bgOurProducts2.png');" class="w-full h-full absolute text-center lg:mt-72 mt-10 bg-no-repeat bg-left">
+            <div class="w-full h-full absolute text-center lg:mt-72 mt-10">
                 <!-- Judul "Our Products" -->
                 <div id="products" class="font-montserrat font-extrabold text-greenOurProduct lg:text-5xl md:text-3xl text-2xl">Our Products</div>
 
                 <!-- Grid Products -->
-                <div class="grid lg:grid-rows-4 md:grid-rows-4 grid-rows-12 grid-flow-row lg:grid-flow-col md:grid-flow-col gap-4  w-full mt-20">
+                <div class="grid lg:grid-rows-4 md:grid-rows-4 grid-rows-12 grid-flow-row lg:grid-flow-col md:grid-flow-col gap-x-4 w-full mt-20">
 
                     <!-- Betel Nut -->
                     <!-- Gambar Product -->
                     <div>
-                        <img src="https://media.discordapp.net/attachments/927170767211360327/938702369431105546/Betel_Nuts.png" alt="" class="w-72 h-72 m-auto rounded-xl">
+                        <img src="https://media.discordapp.net/attachments/937942372497649664/945187822086815784/6.png?width=947&height=683" alt="" class="w-72 m-auto rounded-xl scale-105 hover:scale-125 duration-300">
                     </div>
                     <!-- Deskripsi Product -->
                     <div>
-                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Betel Nut</h1>
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 -mt-4">Betel Nut</h1>
                         <div class="w-72 m-auto bg-white">
                             <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">Pungent, bitter, spicy, sweet, salty, and astringent. It is like chewing a wooden <span class="text-gray-300 lg:text-blackText">pencil <span class="lg:text-gray-300 md:text-gray-300 ">end minus the taste of...</span></span></p>
-                            <a href="/betelNut.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
-                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <a href="/betelNut.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:scale-105 duration-300">SEE DETAILS
+                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
                                 </svg>
                             </a>
@@ -180,15 +180,15 @@
                     <!-- Cloves -->
                     <!-- Gambar Product -->
                     <div>
-                        <img src="https://media.discordapp.net/attachments/927170767211360327/938702304260005908/Cloves.png" alt="" class="w-72 h-72 m-auto rounded-xl">
+                        <img src="https://media.discordapp.net/attachments/937944126480076841/945187956333883483/3.png?width=947&height=683" alt="" class="w-72 m-auto rounded-xl scale-105 hover:scale-125 duration-300">
                     </div>
                     <!-- Deskripsi Product -->
                     <div>
-                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Cloves</h1>
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 -mt-4">Cloves</h1>
                         <div class="w-72 m-auto bg-white">
                             <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">Cloves are the aromatic dried flower buds of a tree. They are native to the <span class="text-gray-300">Maluku islands in Indonesia... </span></p>
-                            <a href="/cloves.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
-                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <a href="/cloves.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:scale-105 duration-300">SEE DETAILS
+                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
                                 </svg>
                             </a>
@@ -198,15 +198,15 @@
                     <!-- Cinnamon Sticks -->
                     <!-- Gambar Product -->
                     <div>
-                        <img src="https://media.discordapp.net/attachments/927170767211360327/938702303907688479/Cinnamon_Sticks.png" alt="" class="w-72 h-72 m-auto rounded-xl">
+                        <img src="https://media.discordapp.net/attachments/937944099670065212/945187917511421962/4.png?width=947&height=683" alt="" class="w-72 m-auto rounded-xl scale-105 hover:scale-125 duration-300">
                     </div>
                     <!-- Deskripsi Product -->
                     <div>
-                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Cinnamon Sticks</h1>
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 -mt-4">Cinnamon Sticks</h1>
                         <div class="w-72 m-auto bg-white">
                             <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">A spice made from the bark of the Cinnamomum aromaticum tree. Cassia <span class="text-gray-300">bark (both powdered and...</span></p>
-                            <a href="/cinnamonStick.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
-                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <a href="/cinnamonStick.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:scale-105 duration-300">SEE DETAILS
+                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
                                 </svg>
                             </a>
@@ -216,15 +216,15 @@
                     <!-- Nutmeg -->
                     <!-- Gambar Product -->
                     <div>
-                        <img src="https://media.discordapp.net/attachments/927170767211360327/938702304624902164/Nutmeg.png" alt="" class="w-72 h-72 m-auto rounded-xl">
+                        <img src="https://media.discordapp.net/attachments/937944161808711740/945188212454858802/2.png?width=947&height=683" alt="" class="w-72 m-auto rounded-xl scale-105 hover:scale-125 duration-300">
                     </div>
                     <!-- Deskripsi Product -->
                     <div>
-                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Nutmeg</h1>
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 -mt-4">Nutmeg</h1>
                         <div class="w-72 m-auto bg-white">
                             <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">Nutmeg is a spice made from the seed of the nutmeg tree, a native Indonesian <span class="text-gray-300">evergreen tree that is the...</span></p>
-                            <a href="/nutmeg.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
-                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <a href="/nutmeg.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:scale-105 duration-300">SEE DETAILS
+                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
                                 </svg>
                             </a>
@@ -234,15 +234,15 @@
                     <!-- White Cardamom -->
                     <!-- Gambar Product -->
                     <div>
-                        <img src="https://media.discordapp.net/attachments/927170767211360327/938702305023373322/White_Cardamom.png" alt="" class="w-72 h-72 m-auto rounded-xl">
+                        <img src="https://media.discordapp.net/attachments/937944195673514024/945188136668004424/1.png?width=947&height=683" alt="" class="w-72 m-auto rounded-xl scale-105 hover:scale-125 duration-300">
                     </div>
                     <!-- Deskripsi Product -->
                     <div>
-                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">White Cardamom</h1>
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 -mt-4">White Cardamom</h1>
                         <div class="w-72 m-auto bg-white">
                             <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">White Cardamom is an aromatic fruit that is used as a spice and also mixed as <span class="text-gray-300 ">herb. This is also used <span class="lg:text-gray-300 md:text-gray-300 ">for...</span></span></p>
-                            <a href="/whiteCardamom.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
-                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <a href="/whiteCardamom.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:scale-105 duration-300">SEE DETAILS
+                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
                                 </svg>
                             </a>
@@ -252,15 +252,15 @@
                     <!-- Black Papper -->
                     <!-- Gambar Product -->
                     <div>
-                        <img src="https://media.discordapp.net/attachments/927170767211360327/938702305463771156/Black_Papper.png" alt="" class="w-72 h-72 m-auto rounded-xl">
+                        <img src="https://media.discordapp.net/attachments/937944002559373312/945187884992962700/5.png?width=947&height=683" alt="" class="w-72 m-auto rounded-xl scale-105 hover:scale-125 duration-300">
                     </div>
                     <!-- Deskripsi Product -->
                     <div>
-                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Black Papper</h1>
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 -mt-4">Black Papper</h1>
                         <div class="w-72 m-auto bg-white">
                             <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">This spice alone accounts for 35% of the world trade in spices. It is no surprise <span class="text-gray-300 lg:text-blackText md:text-blackText ">then </span><span class="text-gray-300 ">that black pepper is known...</span></span></p>
-                            <a href="/blackPepper.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
-                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <a href="/blackPepper.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:scale-105 duration-300">SEE DETAILS
+                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
                                 </svg>
                             </a>
