Add Muhammad Usamah to About Us

--- a/cinnamonStick.html
+++ b/cinnamonStick.html
@@ -190,7 +190,7 @@
                     <!-- Spesification 4 -->
                     <div class="flex items-center lg:mt-9 my-6">
                         <img src="https://media.discordapp.net/attachments/938023978906300446/938024038666764308/Group_52.png" alt="" class="pr-5 w-20 lg:w-auto hover:scale-110 duration-300">
-                        <p><span class="text-black font-normal">Minimum Order FCL</span> 15 Metric Tons</p>
+                        <p><span class="text-black font-normal">Minimum Order 1 x 20ft FCL</span> 12 Metric Tons</p>
                     </div>
                 </div>
             </div>
