--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div id="products" class="font-montserrat font-extrabold text-greenOurProduct lg:text-5xl md:text-3xl text-2xl">Our Products</div>
 
                 <!-- Grid Products -->
-                <div class="grid lg:grid-rows-4 md:grid-rows-4 grid-rows-12 grid-flow-row lg:grid-flow-col md:grid-flow-col gap-x-4 w-full mt-20">
+                <div class="grid lg:grid-rows-4 md:grid-rows-4 grid-rows-12 grid-flow-row lg:grid-flow-col md:grid-flow-col gap-x-4 w-full mt-10">
 
                     <!-- Betel Nut -->
                     <!-- Gambar Product -->
@@ -179,7 +179,7 @@
 
                     <!-- Cloves -->
                     <!-- Gambar Product -->
-                    <div>
+                    <div class="mt-10">
                         <img src="https://media.discordapp.net/attachments/937944126480076841/945187956333883483/3.png?width=947&height=683" alt="" class="w-72 m-auto rounded-xl scale-105 hover:scale-125 duration-300">
                     </div>
                     <!-- Deskripsi Product -->
@@ -215,7 +215,7 @@
 
                     <!-- Nutmeg -->
                     <!-- Gambar Product -->
-                    <div>
+                    <div class="mt-10">
                         <img src="https://media.discordapp.net/attachments/937944161808711740/945188212454858802/2.png?width=947&height=683" alt="" class="w-72 m-auto rounded-xl scale-105 hover:scale-125 duration-300">
                     </div>
                     <!-- Deskripsi Product -->
@@ -249,14 +249,14 @@
                         </div>
                     </div>
 
-                    <!-- Black Papper -->
+                    <!-- Black Pepper -->
                     <!-- Gambar Product -->
-                    <div>
+                    <div class="mt-10">
                         <img src="https://media.discordapp.net/attachments/937944002559373312/945187884992962700/5.png?width=947&height=683" alt="" class="w-72 m-auto rounded-xl scale-105 hover:scale-125 duration-300">
                     </div>
                     <!-- Deskripsi Product -->
                     <div>
-                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 -mt-4">Black Papper</h1>
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 -mt-4">Black Pepper</h1>
                         <div class="w-72 m-auto bg-white">
                             <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">This spice alone accounts for 35% of the world trade in spices. It is no surprise <span class="text-gray-300 lg:text-blackText md:text-blackText ">then </span><span class="text-gray-300 ">that black pepper is known...</span></span></p>
                             <a href="/blackPepper.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:scale-105 duration-300">SEE DETAILS
