--- a/aboutUs.html
+++ b/aboutUs.html
@@ -98,15 +98,6 @@
               <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/AboutUs/About Us-min.png" alt=""></div>
 
             </div>
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-          
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-          
-            <!-- If we need scrollbar -->
-            <div class="swiper-scrollbar"></div>
 
         </div>
         <!-- End Image Slider -->
@@ -194,11 +185,11 @@
                 <div class="w-full h-full lg:mt-36 mt-10 mb-10 text-center text-greenAgro font-montserrat font-extrabold lg:text-5xl text-3xl">Our Team</div>
                 <div class="grid lg:grid-cols-2 md:grid-cols-2 grid-cols-1 grid-flow-row lg:grid-flow-row md:grid-flow-row gap-y-10 lg:mt-20 lg:px-72">
                     <!-- Wahampi -->
-                    <div class="hover:scale-110 duration-300 lg:col-span-2 col-span-1 m-5">
+                    <div class="hover:scale-110 duration-300 mx-5">
                         <img src="https://media.discordapp.net/attachments/938716010863808512/938716098029813779/Profile_Wafi-min.png?width=384&height=682" alt="Muhammad Hibatul Wafi" class="m-auto rounded-3xl w-72 duration-300">
                         <h1 class="text-blackSeeDetails font-poppins font-semibold lg:text-2xl text-xl py-2">Muhammad Hibatul Wafi Bin Rahmat</h1>
                         <div class="m-auto text-black font-poppins font-normal text-center lg:text-lg md:text-lg text-sm leading-8">
-                            President Director
+                            Chief Executive Officer
                         </div>
                         <div class="flex sticky m-auto justify-center lg:mt-5 mt-3">
                             <a href="https://www.instagram.com/mhibwafi/">
@@ -215,7 +206,7 @@
                         <img src="https://media.discordapp.net/attachments/938716010863808512/938716117927591997/Profil_Daffa.png?width=384&height=682" alt="Ahmad Daffa Muttaqin" class="m-auto rounded-3xl w-72 duration-300">
                         <h1 class="text-blackSeeDetails font-poppins font-semibold lg:text-2xl text-xl py-2">Ahmad Daffa Muttaqin</h1>
                         <div class="m-auto text-black font-poppins font-normal text-center lg:text-lg md:text-lg text-sm leading-8">
-                            Operating Director
+                            Chief Operating Officer
                         </div>
                         <div class="flex sticky m-auto justify-center lg:mt-5 mt-3">
                             <a href="https://www.instagram.com/daffamuttaqin/">
@@ -227,12 +218,29 @@
                         </div>
                     </div>
 
+                    <!-- Sameh -->
+                    <div class="hover:scale-110 duration-300 mx-5 lg:mt-20">
+                        <img src="https://media.discordapp.net/attachments/938716010863808512/951335040225251408/poto_sameh.jpg?width=380&height=675" alt="Muamar Hafizh" class="m-auto rounded-3xl w-72 duration-300">
+                        <h1 class="text-blackSeeDetails font-poppins font-semibold lg:text-2xl text-xl py-2">Muhammad Usamah Arifianto</h1>
+                        <div class="m-auto text-black font-poppins font-normal text-center lg:text-lg md:text-lg text-sm leading-8">
+                            Chief Marketing Officer
+                        </div>
+                        <div class="flex sticky m-auto justify-center lg:mt-5 mt-3">
+                            <!-- <a href="https://www.instagram.com/muamarhafizh_/">
+                                <img src="https://media.discordapp.net/attachments/938376555254652948/938376588322558022/Instagram2.png" alt="Instagram" class="w-9 mx-5 hover:scale-110 duration-200 m-auto">
+                            </a> -->
+                            <a href="https://www.linkedin.com/in/muhammad-usamah-arifianto-841a421a4/">
+                                <img src="https://media.discordapp.net/attachments/938376555254652948/938376588725219338/linkedin2.png" alt="Linkedin" class="w-9 mx-5 hover:scale-110 duration-200 m-auto">
+                            </a>
+                        </div>
+                    </div>
+
                     <!-- Amar -->
-                    <div class="hover:scale-110 duration-300 mx-5">
+                    <div class="hover:scale-110 duration-300 mx-5 lg:mt-20">
                         <img src="https://media.discordapp.net/attachments/938716010863808512/942669980191821844/IMG_1082222.jpg?width=384&height=682" alt="Muamar Hafizh" class="m-auto rounded-3xl w-72 duration-300">
                         <h1 class="text-blackSeeDetails font-poppins font-semibold lg:text-2xl text-xl py-2">Muamar Hafizh</h1>
                         <div class="m-auto text-black font-poppins font-normal text-center lg:text-lg md:text-lg text-sm leading-8">
-                            Financial Director
+                            Chief Financial Officer
                         </div>
                         <div class="flex sticky m-auto justify-center lg:mt-5 mt-3">
                             <a href="https://www.instagram.com/muamarhafizh_/">
@@ -336,6 +344,5 @@
 
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="./assets/js/add.js"></script>
-    <script src="./assets/js/swiper.js"></script>
 </body>
 </html>
